Fix main section positioning and footer position. Need to make it so main section stretches vertically and fix the subnav positioning

--- a/neighborhood-library/src/App.css
+++ b/neighborhood-library/src/App.css
@@ -6,11 +6,42 @@
 *************
 */
 
-.App {
+html {
   font-family: Raleway, sans-serif;
+
   width: 100vw;
+
   max-width: 100%;
+
+  height: 100vh;
   background-color: #d6ddf1;
+  box-sizing: border-box;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+  background-color: #d6ddf1;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* MAIN Content section of app*/
+
+main {
+  height: calc(100vh - 138px - 100px);
+  position: relative;
+  top: 138px;
+  left: 0;
+  width: 100%;
+  min-height: 500px;
+  overflow: auto;
+}
+
+a {
+  color: #f1f1f1;
 }
 
 /* 
@@ -23,7 +54,7 @@
 header {
   position: absolute;
   z-index: 1;
-  width: 100vw;
+  width: 100%;
   height: 138px;
   max-width: 100%;
   left: 0px;
@@ -63,24 +94,37 @@ header .title {
 /* Account drop down nav */
 header .nav {
   position: absolute;
+
   right: 2.78%;
-  top: 0%;
+
+  top: 11px;
+
   bottom: 0%;
+
   width: 200px;
+
   padding-right: 40px;
 
   display: flex;
+
   justify-content: center;
+
   align-items: center;
+
   text-align: center;
 
   font-family: Raleway;
+
   font-style: normal;
+
   font-weight: bold;
+
   font-size: 24px;
+
   line-height: 28px;
 
   mix-blend-mode: normal;
+
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -162,6 +206,9 @@ header form input,
   width: 70%;
   background: #f1f1f1;
   border-radius: 15px;
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 header form button,
@@ -172,7 +219,7 @@ header form button,
   font-size: 24px;
   line-height: 28px;
   width: 25%;
-  height: 80px;
+  height: 50px;
   color: #f1f1f1;
   background: none;
   border-radius: 15px;
@@ -185,19 +232,15 @@ header form button,
 ******************
 */
 
-main {
-  padding-top: 150px;
-}
-
-main .my-shelf-nav {
-  position: absolute;
+.my-shelf-nav {
+  position: relative;
   z-index: 0;
   width: 100%;
   height: 60px;
-  left: 0px;
-  top: 138px;
+  top: 0px;
   display: flex;
   justify-content: flex-start;
+
   background: #395dc0;
 }
 
@@ -212,33 +255,50 @@ main .my-shelf-nav {
   color: #fcc4b3;
   padding: 0 2%;
 }
+
+/* Home Library, Borrowed, and Loaned */
+
+.shelves {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+}
+
+.shelf {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.book {
+  background: #fcc3b2;
+  box-shadow: 0px 4px 4px rgba(57, 93, 192, 0.25);
+  border-radius: 15px;
+  height: 400px;
+}
+
+.book-cover {
+  border-radius: 15px;
+  width: 90%;
+  height: 275px;
+}
+
 /* Footer */
 footer {
   display: flex;
-  max-width: 100%;
-  width: 100vw;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background: #8099d4;
-
-  color: white;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  padding: 20px 0;
+  padding: 50px 0;
+  margin-bottom: 0px;
   font-size: 12px;
+  position: static;
 }
 
-.legal-links {
+footer .legal-links {
   display: flex;
   width: 40%;
   justify-content: space-evenly;
   margin-top: 5px;
-}
-
-footer a {
-  color: white;
-}
-footer a:hover {
-  color: white;
 }
